--- a/.github/ISSUE_TEMPLATE/feature_request_template.yaml
+++ b/.github/ISSUE_TEMPLATE/feature_request_template.yaml
@@ -2,7 +2,7 @@
 
 name: 🌱 Feature request
 description: Create a feature request to help us improve AdGuard VPN for Mac.
-labels: []
+labels: ['feature request']
 body:
   - type: textarea
     id: what-happened
