--- a/.github/ISSUE_TEMPLATE/issue_template.yaml
+++ b/.github/ISSUE_TEMPLATE/issue_template.yaml
@@ -2,7 +2,7 @@
 
 name: 🐞 Bug report
 description: Create a bug report to help us improve AdGuard VPN for Mac.
-labels: []
+labels: [bug]
 body:
   - type: markdown
     attributes:
