--- a/.github/ISSUE_TEMPLATE/01-bug-report.yaml
+++ b/.github/ISSUE_TEMPLATE/01-bug-report.yaml
@@ -1,7 +1,5 @@
----
-
 name: 🐞 Bug report
-description: Create a bug report to help us improve AdGuard VPN for Mac.
+description: If you found something that we should know about
 labels: [bug]
 body:
   - type: markdown
@@ -11,19 +9,17 @@ body:
   - type: checkboxes
     attributes:
       label: Please answer the following questions for yourself before submitting an issue.
-      description:
       options:
-        - label: I am running the latest version
-        - label: I checked the documentation and found no answer
+        - label: I checked the [knowledge base](https://adguard-vpn.com/kb/) and found no answer
+          required: true
         - label: I checked to make sure that this issue has not already been filed
-    validations:
-      required: true
+          required: true
   - type: input
     id: app_version
     attributes:
       label: AdGuard VPN version
       description: What version of our application are you running?
-      placeholder: For example, 2.0.2.304 beta
+      placeholder: For example, 2.3
     validations:
       required: true
   - type: textarea
@@ -31,22 +27,58 @@ body:
       label: Environment
       description: |
         Examples:
-          - **OS**: Monterey 12.4
-          - **Other network-level software**: AdGuard (or any Antivirus, Firewall)
+          - **OS**: Sonoma 14.5
+          - **Other network-level software**: AdGuard ad blocker (or any Antivirus, Firewall)
       value: |
           - OS:
           - Other network-level software:
       render: markdown
     validations:
       required: true
+  - type: dropdown
+    id: dns_protection
+    attributes:
+      label: Which DNS server do you use?
+      multiple: false
+      options:
+        - Default
+        - AdGuard DNS
+        - AdGuard DNS Family Protection
+        - AdGuard DNS Non-filtering
+        - Google DNS
+        - Cloudflare DNS
+        - Cloudflare for Families - Malware and Adult Content
+        - Cloudflare for Families - Malware Blocking
+        - Open DNS
+        - Open DNS with Family Shield
+        - Quad9
+        - Custom DNS
+    validations:
+      required: true
+      
+  - type: textarea
+    id: custom_dns
+    attributes:
+      label: Custom DNS
+      description: Please provide a link to the custom DNS you use
+      placeholder: If you have enabled DNS from the pre-defined list, skip this step.
+    validations:
+      required: false
+
   - type: textarea
     id: what-happened
     attributes:
       label: Issue Details
-      description: What happened?
-      placeholder: Please describe the steps to reproduce the issue you've experienced.
+      description: Please provide a set of steps to reproduce the issue
+      placeholder:
+      value: |
+        Steps to reproduce:
+        1.
+        2.
+        3.
     validations:
       required: true
+
   - type: textarea
     id: how_it_should_be
     attributes:
@@ -55,6 +87,15 @@ body:
       placeholder: A clear and concise description of what you expected to happen.
     validations:
       required: false
+
+  - type: textarea
+    id: how_it_is
+    attributes:
+      label: Actual Behavior
+      placeholder: A clear description of what happened instead.
+    validations:
+      required: true
+
   - type: textarea
     id: screens
     attributes:
@@ -65,13 +106,14 @@ body:
         Use `<details> </details>` tag to hide screenshots under the spoiler.
       placeholder: If applicable add screenshots explaining your problem.
       value: |
-          <details><summary>Screenshot 1:</summary>
+          <details><summary>Screenshot 1</summary>
 
           <!-- paste screenshot here -->
 
           </details>
     validations:
       required: false
+
   - type: textarea
     id: additional
     attributes:
@@ -80,3 +122,9 @@ body:
       placeholder: Add any other context about the problem here.
     validations:
       required: false
+
+  - type: markdown
+    attributes:
+      value: |
+        ---
+        Upvote [important issues](https://github.com/AdguardTeam/AdGuardVPNForMac/issues?q=is%3Aissue+is%3Aopen+sort%3Areactions-%2B1-desc+) with a :+1:
