--- a/.github/ISSUE_TEMPLATE/01-bug-report.yaml
+++ b/.github/ISSUE_TEMPLATE/01-bug-report.yaml
@@ -1,6 +1,6 @@
 name: 🐞 Bug report
 description: If you found something that we should know about
-labels: [bug]
+labels: "Bug"
 body:
   - type: markdown
     attributes:
